--- a/Dockerfile.ui
+++ b/Dockerfile.ui
@@ -44,7 +44,7 @@ ENV NX_CACHE_DIRECTORY=/app/node_modules/.cache/nx
 COPY --from=nx-cache /app/node_modules/.cache/nx /app/node_modules/.cache/nx
 
 # Remove files and folders older than 24 hours from the nx cache
-RUN find /app/node_modules/.cache/nx -type f -mtime +1 -delete && \
+RUN find /app/node_modules/.cache/nx -type f -mmin +1440 -delete && \
     find /app/node_modules/.cache/nx -type d -empty -delete
 
 COPY tools/tests ./tools/tests
