--- a/Dockerfile.ui
+++ b/Dockerfile.ui
@@ -45,8 +45,8 @@ ENV NX_CACHE_DIRECTORY=/app/node_modules/.cache/nx
 COPY --from=nx-cache /app/node_modules/.cache/nx /app/node_modules/.cache/nx
 
 # Remove files and folders older than 24 hours from the nx cache
-RUN (find /app/node_modules/.cache/nx -type f -mtime +1 -delete 2>/dev/null || true) && \
-    (find /app/node_modules/.cache/nx -type d -empty -delete 2>/dev/null || true)
+RUN find /app/node_modules/.cache/nx -type f -mmin +1440 -delete && \
+    find /app/node_modules/.cache/nx -type d -empty -delete
 
 COPY tools/tests ./tools/tests
 
@@ -151,9 +151,7 @@ RUN \
   # Create structure to match deployment need
   mkdir -p tenant/t && \
   # Move all files into it
-  mv -v main/* tenant/t/. && \
-  # Remove the main folder
-  rm -rf main
+  ln -s main/* tenant/t/
 
 EXPOSE 8080
 
