--- a/Dockerfile.ui
+++ b/Dockerfile.ui
@@ -51,13 +51,13 @@ COPY --from=nx-cache /app/node_modules/.cache/nx /app/node_modules/.cache/nx
 COPY tools/tests ./tools/tests
 
 # Copy the tar.xz file if it exists
-COPY nxcache/nxcache.tar.xz* ./
+# COPY nxcache/nxcache.tar.xz* ./
 
 # Extract it only if the file exists
-RUN if [ -f ./nxcache.tar.xz ]; then \
-      mkdir -p ./node_modules/.cache/nx && \
-      tar -xJf ./nxcache.tar.xz -C ./node_modules/.cache/nx; \
-    fi
+# RUN if [ -f ./nxcache.tar.xz ]; then \
+#       mkdir -p ./node_modules/.cache/nx && \
+#       tar -xJf ./nxcache.tar.xz -C ./node_modules/.cache/nx; \
+#     fi
 
 # dump git information
 RUN source ${ENV_FILE} \
