--- a/libs/common/components/src/theme/overrides.less
+++ b/libs/common/components/src/theme/overrides.less
@@ -41,6 +41,24 @@
     font-weight: var(--acx-headline-5-font-weight);
   }
 
+  /* width */
+  ::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+  }
+
+  /* Track */
+  ::-webkit-scrollbar-track {
+    border-radius: 6px;
+    background: transparent; 
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: var(--acx-neutrals-30);
+    border-radius: 4px;
+  }
+
   .ant-typography {
     a:hover, a:active {
       .ant-space-item {
