--- a/libs/common/components/src/theme/colors-light.less
+++ b/libs/common/components/src/theme/colors-light.less
@@ -69,15 +69,15 @@
   --acx-semantics-violet-70: #55107B;
 
   --acx-viz-qualitative-1: #66B1E8;
-  --acx-viz-qualitative-2: #61C46E;
-  --acx-viz-qualitative-3: #ADDB57;
+  --acx-viz-qualitative-2: #EC7100;
+  --acx-viz-qualitative-3: #61C46E;
   --acx-viz-qualitative-4: #F9C34B;
-  --acx-viz-qualitative-5: #EC7100;
+  --acx-viz-qualitative-5: #F095FF;
   --acx-viz-qualitative-6: #F15854;
-  --acx-viz-qualitative-7: #F095FF;
+  --acx-viz-qualitative-7: #258D36;
   --acx-viz-qualitative-8: #A74EED;
-  --acx-viz-qualitative-9: #3C84E0;
-  --acx-viz-qualitative-10: #258D36;
+  --acx-viz-qualitative-9: #ADDB57;
+  --acx-viz-qualitative-10: #3C84E0;
   --acx-viz-qualitative-11: #8BAF69;
   --acx-viz-qualitative-12: #27CFC1;
   --acx-viz-qualitative-13: #16A2C9;
