--- a/Dockerfile.ui
+++ b/Dockerfile.ui
@@ -5,7 +5,7 @@ ARG GAR_CICD_BASEIMAGE_CONTAINER_URL
 
 # Avoid "docker build" for more than one hour, causing gcloud credential to time out.
 # So we need to execute "pull image" first.
-FROM ${GAR_CICD_BASEIMAGE_CONTAINER_URL}ci-precommit-sonar:stable as sonar-stage
+FROM ${GAR_CICD_BASEIMAGE_CONTAINER_URL}ci-precommit-sonar:stable
 FROM ${GAR_CONTAINER_URL}nginx:1.21.6-alpine as final-stage
 
 FROM ${GAR_DOCKER_ROOT_URL}/acx-service/acx-ui-cache/nx-cache:latest as nx-cache
