--- a/Dockerfile.ui
+++ b/Dockerfile.ui
@@ -99,6 +99,7 @@ ARG PRECOMMIT
 ARG GIT_COMMIT_BRANCH
 
 RUN mkdir -p /home/jenkins/nemo-server/workspace/CICD_CI_CACHE_RKSCLOUD_ACX-UI/service/coverage
+RUN chmod 777 /home/jenkins/nemo-server/workspace/CICD_CI_CACHE_RKSCLOUD_ACX-UI/service/coverage
 RUN ln -s /home/jenkins/nemo-server/workspace/CICD_CI_CACHE_RKSCLOUD_ACX-UI/service/coverage /app/
 
 ENV NX_RUN_OPTIONS="--coverage --maxWorkers=30% --noStackTrace --bail"
